adt2unit.h

extern uint8_t  tempo;
extern uint8_t  speed;
extern bool     repeat_pattern;
extern bool     replay_forbidden;
extern bool     calibrating;
extern bool     no_status_refresh;
extern bool     no_sync_playing;
extern bool       channel_flag [20]; // HINT: (FPC) start index 1
extern tPLAY_STATUS play_status;
extern uint8_t current_order;
extern tFIXED_SONGDATA songdata;
extern uint8_t  common_flag_backup;
extern bool     volume_scaling_backup;
extern tCHUNK   event_table_backup  [20]; // HINT: (FPC) start index 1
extern uint16_t freq_table_backup   [20]; // HINT: (FPC) start index 1
extern uint16_t freqtable2_backup   [20]; // HINT: (FPC) start index 1
extern bool     keyoff_loop_backup  [20]; // HINT: (FPC) start index 1
extern bool     channel_flag_backup [20]; // HINT: (FPC) start index 1
extern tFM_PARAMETER_TABLE
                fmpar_table_backup  [20]; // HINT: (FPC) start index 1
extern uint16_t volume_table_backup [20]; // HINT: (FPC) start index 1
extern bool     pan_lock_backup     [20]; // HINT: (FPC) start index 1
extern bool     volume_lock_backup  [20]; // HINT: (FPC) start index 1
extern bool     peak_lock_backup    [20]; // HINT: (FPC) start index 1
extern uint8_t  panning_table_backup[20]; // HINT: (FPC) start index 1
extern uint8_t  voice_table_backup  [20]; // HINT: (FPC) start index 1
extern uint8_t  flag_4op_backup;
extern struct status_backup_t {
  bool replay_forbidden;
  tPLAY_STATUS play_status;
} status_backup;
uint16_t nFreq (uint8_t note);
void     change_freq (uint8_t chan, uint16_t freq);
uint8_t  calc_pattern_pos (uint8_t pattern);
uint16_t concw (uint8_t lo, uint8_t hi);
uint8_t  ins_parameter (uint8_t ins, uint8_t param);
bool     is_chan_adsr_data_empty (uint8_t chan);
bool     is_ins_adsr_data_empty (uint8_t ins);
uint8_t  scale_volume (uint8_t volume, uint8_t scale_factor);
uint16_t _macro_speedup (void);
void calibrate_player (uint8_t order, uint8_t line,
                       bool status_filter, bool line_dependent);
void update_timer (uint16_t Hz);
void key_on (uint8_t chan);
void key_off (uint8_t chan);
void release_sustaining_sound (uint8_t chan);
void init_macro_table (uint8_t chan, uint8_t note, uint8_t ins, uint16_t freq);
void set_ins_volume (uint8_t modulator, uint8_t carrier, uint8_t chan);
void update_modulator_adsrw (uint8_t chan);
void update_carrier_adsrw (uint8_t chan);
void update_fmpar (uint8_t chan);
void reset_chan_data (uint8_t chan);
void poll_proc (void);
void macro_poll_proc (void);
void init_buffers (void);
void init_player (void);
void reset_player (void);
void start_playing (void);
void stop_playing (void);
void update_song_position (void);
void change_frequency (uint8_t chan, uint16_t freq);
void set_global_volume (void);
void set_ins_data (uint8_t ins, uint8_t chan);
void init_timer_proc (void);
void done_timer_proc (void);
void realtime_gfx_poll_proc (void);
void decay_bars_refresh (void);
void status_refresh (void);
void trace_update_proc (void);
void get_chunk (uint8_t pattern, uint8_t line, uint8_t channel, tCHUNK *chunk);
void put_chunk (uint8_t pattern, uint8_t line, uint8_t channel, const tCHUNK *chunk);
uint8_t get_chanpos (const void *data, uint8_t channels, uint8_t scancode);
uint8_t get_chanpos2 (const void *data, uint8_t channels, uint8_t scancode);
uint8_t count_channel (uint8_t hpos);
uint8_t count_pos (uint8_t hpos);
uint16_t calc_max_speedup (uint8_t tempo);
double  calc_bpm_speed (uint8_t tempo, uint8_t speed, uint8_t rows_per_beat);
double  calc_realtime_bpm_speed (uint8_t tempo, uint8_t speed, uint8_t rows_per_beat);
int16_t calc_order_jump (void);
int16_t calc_following_order (uint8_t order);
bool    is_4op_chan (uint8_t chan);
void count_order (uint8_t *entries);
void count_patterns (uint8_t *patterns);
void count_instruments (uint8_t *instruments);
void init_old_songdata (void);
void init_songdata (void);
void update_instr_data (uint8_t ins);
void load_instrument (void *data, uint8_t chan);
void output_note (uint8_t note, uint8_t ins, uint8_t chan,
                  bool restart_macro, bool restart_adsr);
int32_t min (int32_t value, int32_t minimum);
int32_t max (int32_t value, int32_t maximum);
void    TimerSetup (uint32_t Hz);
extern uint8_t block_xstart;
extern uint8_t block_ystart;
extern uint8_t block_x0;
extern uint8_t block_y0;
extern uint8_t block_x1;
extern uint8_t block_y1;
bool is_in_block (uint8_t x0, uint8_t y0, uint8_t x1, uint8_t y1);
void fade_out_playback (bool fade_screen);
extern int32_t ticklooper;
extern int32_t macro_ticklooper;
#define MAX_NUM_BANK_POSITIONS 1000
#define MAX_NUM_BANK_POSITIONS 500
extern int32_t bank_position_list_size;
extern struct bank_position_list_t {
  String bank_name[BANK_NAME_LEN+1];
  int32_t bank_size;
  int32_t bank_position;
} bank_position_list[MAX_NUM_BANK_POSITIONS]; // HINT: (FPC) start index 1
int32_t get_bank_position (const String *bank_name, int32_t bank_size);
void add_bank_position (const String *bank_name, int32_t bank_size, int32_t bank_position);
void realtime_gfx_poll_proc (void);
void init_adt2unit (void);