adt2unit.pas


  common_flag_backup: Byte; cvar; external;
  volume_scaling_backup: Boolean; cvar; external;
  event_table_backup: array[1..20] of tCHUNK; cvar; external;
  freq_table_backup: array[1..20] of Word; cvar; external;
  freqtable2_backup: array[1..20] of Word; cvar; external;
  keyoff_loop_backup: array[1..20] of Boolean; cvar; external;
  channel_flag_backup: array[1..20] of Boolean; cvar; external;
  fmpar_table_backup: array[1..20] of tFM_PARAMETER_TABLE; cvar; external;
  volume_table_backup: array[1..20] of Word; cvar; external;
  pan_lock_backup: array[1..20] of Boolean; cvar; external;
  volume_lock_backup: array[1..20] of Boolean; cvar; external;
  peak_lock_backup: array[1..20] of Boolean; cvar; external;
  panning_table_backup: array[1..20] of Byte; cvar; external;
  voice_table_backup: array[1..20] of Byte; cvar; external;
  flag_4op_backup: Byte; cvar; external;
  status_backup: Record
                   replay_forbidden: Boolean;
                   play_status: tPLAY_STATUS;
                 end; cvar; external;

function  nFreq(note: Byte): Word; cdecl; external;
procedure change_freq(chan: Byte; freq: Word); cdecl; external;
function  calc_pattern_pos(pattern: Byte): Byte; cdecl; external;
function  concw(lo,hi: Byte): Word; cdecl; external;
function  ins_parameter(ins,param: Byte): Byte; cdecl; external;
function  is_chan_adsr_data_empty(chan: Byte): Boolean; cdecl; external;
function  is_ins_adsr_data_empty(ins: Byte): Boolean; cdecl; external;
function  scale_volume(volume,scale_factor: Byte): Byte; cdecl; external;
function  _macro_speedup: Word; cdecl; external;
procedure calibrate_player(order,line: Byte; status_filter: Boolean;
                           line_dependent: Boolean);
procedure update_timer(Hz: Word); cdecl; external;
procedure key_on(chan: Byte); cdecl; external;
procedure key_off(chan: Byte); cdecl; external;
procedure release_sustaining_sound(chan: Byte); cdecl; external;
procedure init_macro_table(chan,note,ins: Byte; freq: Word); cdecl; external;
procedure set_ins_volume(modulator,carrier,chan: Byte); cdecl; external;
procedure update_modulator_adsrw(chan: Byte); cdecl; external;
procedure update_carrier_adsrw(chan: Byte); cdecl; external;
procedure update_fmpar(chan: Byte); cdecl; external;
procedure reset_chan_data(chan: Byte); cdecl; external;
procedure poll_proc; cdecl; external;
procedure macro_poll_proc; cdecl; external;
procedure init_buffers; cdecl; external;
procedure init_player; cdecl; external;
procedure reset_player; cdecl; external;
procedure start_playing; cdecl; external;
procedure stop_playing; cdecl; external;
procedure update_song_position; cdecl; external;
procedure change_frequency(chan: Byte; freq: Word); cdecl; external;
procedure set_global_volume; cdecl; external;
procedure set_ins_data(ins,chan: Byte); cdecl; external;
procedure init_timer_proc; cdecl; external;
procedure done_timer_proc; cdecl; external;
procedure realtime_gfx_poll_proc; cdecl;
procedure decay_bars_refresh; cdecl;
procedure status_refresh; cdecl;
procedure trace_update_proc;

procedure get_chunk(pattern,line,channel: Byte; var chunk: tCHUNK); cdecl; external;
procedure put_chunk(pattern,line,channel: Byte; var chunk: tCHUNK); cdecl; external;

function  get_chanpos(var data; channels,scancode: Byte): Byte;
function  get_chanpos2(var data; channels,scancode: Byte): Byte;
function  count_channel(hpos: Byte): Byte;
function  count_pos(hpos: Byte): Byte;
function  calc_max_speedup(tempo: Byte): Word;
function  calc_bpm_speed(tempo,speed,rows_per_beat: Byte): Real;
function  calc_realtime_bpm_speed(tempo,speed,rows_per_beat: Byte): Real;
function  calc_order_jump: Integer; cdecl; external;
function  calc_following_order(order: Byte): Integer; cdecl; external;
function  is_4op_chan(chan: Byte): Boolean; cdecl; external;

procedure count_order(var entries: Byte); cdecl; external;
procedure count_patterns(var patterns: Byte);
procedure count_instruments(var instruments: Byte);
procedure init_old_songdata; cdecl; external;
procedure init_songdata; cdecl; external;
procedure update_instr_data(ins: Byte);
procedure load_instrument(var data; chan: Byte);
procedure output_note(note,ins,chan: Byte;
                      restart_macro,restart_adsr: Boolean); cdecl; external;

function  min(value: Longint; minimum: Longint): Longint; cdecl; external;
function  max(value: Longint; maximum: Longint): Longint; cdecl; external;
procedure TimerSetup(Hz: Longint); cdecl; external;

var
  block_xstart: Byte; cvar; external;
  block_ystart: Byte; cvar; external;

  block_x0: Byte; cvar; external;
  block_y0: Byte; cvar; external;
  block_x1: Byte; cvar; external;
  block_y1: Byte; cvar; external;

function  is_in_block(x0,y0,x1,y1: Byte): Boolean;
procedure fade_out_playback(fade_screen: Boolean); cdecl;

var
  ticklooper: Longint; cvar; external;
  macro_ticklooper: Longint; cvar; external;

const
{$IFDEF GO32V2}
  MAX_NUM_BANK_POSITIONS = 1000;
{$ELSE} // NOT DEFINED(GO32V2)
  MAX_NUM_BANK_POSITIONS = 500;
{$ENDIF} // NOT DEFINED(GO32V2)

var
  bank_position_list_size: Longint; cvar; external;
  bank_position_list:
    array[1..MAX_NUM_BANK_POSITIONS] of Record
{$IFDEF GO32V2}
                                          bank_name: String[50];
{$ELSE} // NOT DEFINED(GO32V2)
                                          bank_name: String;
{$ENDIF} // NOT DEFINED(GO32V2)
                                          bank_size: Longint;
                                          bank_position: Longint;
                                        end; cvar; external;

function  get_bank_position(bank_name: String; bank_size: Longint): Longint;
procedure add_bank_position(bank_name: String; bank_size: Longint; bank_position: Longint);

{$IFDEF GO32V2}
const
  ___UNIT_DATA_END___: Dword = 0;
{$ENDIF} // DEFINED(GO32V2)

procedure init_adt2unit; cdecl; external;

implementation

uses
  debug,
  pascal,
{$IFDEF GO32V2}
  CRT,
  DOS,
  GO32,
  PIT,
  ISS_Tim,
{$ELSE} // NOT DEFINED(GO32V2)
  DOS,
  SDL_Types,
  SDL_Timer,
{$ENDIF} // NOT DEFINED(GO32V2)
  AdT2opl3,
  AdT2sys,
  AdT2extn,
  AdT2ext2,
  AdT2keyb,
  TxtScrIO,
  StringIO,
  DialogIO,
  ParserIO;

{$IFDEF GO32V2}

const
  ___IRQ_DATA_START___: Dword = 0;

procedure ___IRQ_CODE_START___; begin end;

{$ENDIF} // DEFINED(GO32V2)

const
  FreqStart = $156;
  FreqEnd   = $2ae;
  FreqRange = FreqEnd-FreqStart;

//nFreq
function calc_freq_shift_up(freq,shift: Word): Word; cdecl; external;
function calc_freq_shift_down(freq,shift: Word): Word; cdecl; external;
function calc_vibtrem_shift(chan: Byte; var table_data): Word; cdecl; external;
function is_data_empty(var buf; size: Longint): Boolean; cdecl; external;
//min
//max
//concw
procedure synchronize_song_timer; cdecl; external;
//change_frequency
//update_timer
procedure update_playback_speed(speed_shift: Longint); cdecl; external;
//key_on
//key_off
//release_sustaining_sound
//scale_volume
function _4op_data_flag(chan: Byte): Dword; cdecl; external;
function _4op_vol_valid_chan(chan: Byte): Boolean; cdecl; external;
//set_ins_volume
procedure set_ins_volume_4op(volume,chan: Byte); cdecl; external;
procedure reset_ins_volume(chan: Byte); cdecl; external;
//set_ins_data
//update_modulator_adsrw
//update_carrier_adsrw
//update_fmpar
//reset_chan_data
//init_macro_table
//output_note
procedure generate_custom_vibrato(value: Byte); cdecl; external;
procedure update_fine_effects(chan: Byte); cdecl; external;
{$I adt2unit/pas/play_line.pas}
procedure portamento_up(chan: Byte; slide: Word; limit: Word); cdecl; external;
procedure portamento_down(chan: Byte; slide: Word; limit: Word); cdecl; external;
procedure macro_vibrato__porta_up(chan: Byte; depth: Byte); cdecl; external;
procedure macro_vibrato__porta_down(chan: Byte; depth: Byte); cdecl; external;
procedure tone_portamento(chan: Byte); cdecl; external;
procedure tone_portamento2(chan: Byte); cdecl; external;
//slide_carrier_volume_up
//slide_modulator_volume_up
procedure slide_volume_up(chan,slide: Byte); cdecl; external;
//slide_carrier_volume_down
//slide_modulator_volume_down
procedure slide_volume_down(chan,slide: Byte); cdecl; external;
procedure volume_slide(chan,up_speed,down_speed: Byte); cdecl; external;
procedure global_volume_slide(up_speed,down_speed: Byte); cdecl; external;
procedure arpeggio(chan: Byte); cdecl; external;
procedure arpeggio2(chan: Byte); cdecl; external;
procedure vibrato(chan: Byte); cdecl; external;
procedure vibrato2(chan: Byte); cdecl; external;
procedure tremolo(chan: Byte); cdecl; external;
procedure tremolo2(chan: Byte); cdecl; external;
procedure update_effects; cdecl; external;
//update_fine_effects
procedure update_extra_fine_effects; cdecl; external;
//calc_following_order
//calc_order_jump
//update_song_position
//poll_proc
//macro_poll_proc
//set_global_volume
{$IFDEF GO32V2}
//update_mouse_position
{$ENDIF}
procedure synchronize_screen; cdecl; external;
//_macro_speedup
//timer_poll_proc

{$IFDEF GO32V2}

const
  ___IRQ_DATA_END___: Dword = 0;

procedure ___IRQ_CODE_END___; begin end;

//TimerSetup
procedure TimerDone; cdecl; external;
procedure TimerInstallHandler(handler: Pointer); cdecl; external;
procedure TimerRemoveHandler; cdecl; external;

{$ELSE} // NOT DEFIED(GO32V2)

var
  timer_handler: Procedure; cdecl; cvar; external;
  TimerID: SDL_TimerID; cvar; external;
  _interval: longint; cvar; external;

//TimerCallback
//TimerSetup
procedure TimerDone; cdecl; external;
procedure TimerInstallHandler(handler: Pointer); cdecl; external;
procedure TimerRemoveHandler; cdecl; external;

{$ENDIF} // NOT DEFIED(GO32V2)

//init_timer_proc
//done_timer_proc

{$i realtime.inc}

//calc_pattern_pos

procedure calibrate_player(order,line: Byte; status_filter: Boolean;
                           line_dependent: Boolean);

var
  temp_channel_flag: array[1..20] of Boolean;
  old_debugging,
  old_repeat_pattern: Boolean;
  jump_count,loop_count,
  temp,previous_order,previous_line: Byte;
  status_backup: Record
                   replay_forbidden: Boolean;
                   play_status: tPLAY_STATUS;
                 end;

procedure update_status;

var
  temp: Byte;

begin
  _dbg_enter ({$I %FILE%}, 'calibrate_player.update_status');

  temp := songdata.pattern_order[current_order];
  If NOT (temp <= $7f) then temp := 0;
  show_str(17,03,byte2hex(current_order),pattern_bckg+status_dynamic_txt);
  show_str(20,03,byte2hex(temp),pattern_bckg+status_dynamic_txt);
  show_str(17,04,'--',pattern_bckg+status_dynamic_txt);
{$IFNDEF GO32V2}
  _draw_screen_without_delay := TRUE;
{$ENDIF}
  draw_screen;

  _dbg_leave; //EXIT //calibrate_player.update_status
end;

var
  _pattern_page,_pattord_page,
  _pattord_hpos,_pattord_vpos: Byte;

begin
  _dbg_enter ({$I %FILE%}, 'calibrate_player');

  If (calc_following_order(0) = -1) then
    begin
      _dbg_leave; EXIT; //calibrate_player
    end;
  calibrating := TRUE;
  status_backup.replay_forbidden := replay_forbidden;
  status_backup.play_status := play_status;
  If status_filter then no_status_refresh := TRUE;

  nul_volume_bars;
  Move(channel_flag,temp_channel_flag,SizeOf(temp_channel_flag));
  FillChar(channel_flag,SizeOf(channel_flag),BYTE(FALSE));

  old_debugging := debugging;
  old_repeat_pattern := repeat_pattern;
  debugging := FALSE;
  repeat_pattern := FALSE;

  If (play_status = isStopped) or
     (order < current_order) or
     (order = calc_following_order(0)) then
    begin
      If NOT no_sync_playing then stop_playing
      else begin
             stop_playing;
             no_sync_playing := TRUE;
           end;
